[package]
name = "mixlayer-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
valence = { path = "/Users/zackangelo/git/valence/lib" }
valence-runtime-ffi = { path = "/Users/zackangelo/git/valence/runtime-ffi" }
